# ambient

./: AUTHORS  ChangeLog  README  README.md  autogen.sh  clean-all.sh  configure.ac
src/: Makefile.am  ambient.c  ambient.h
